# LoLEditor

./: .gitignore  README.md  pyproject.toml
config/: example-project.json
src/league_video_editor/: __init__.py  analyze.py  cache.py  champions.py  cli.py  description.py  ffmpeg_utils.py  models.py  render.py  thumbnail.py  upload.py  watchability.py
src/league_video_editor/application/: __init__.py  analysis.py  content.py  overlays.py  production.py  project_store.py
src/league_video_editor/config/: settings.py
src/league_video_editor/core/: highlight_detector.py  smart_editor.py
src/league_video_editor/server/: app.py
tests/: test_product_workflow.py  test_segments.py
ui/: tailwind.config.js
ui/electron/: main.js
ui/src/: App.tsx  index.css
ui/src/components/: DropZone.tsx  Header.tsx  MetadataPanel.tsx  PipelineProgress.tsx  Timeline.tsx
ui/src/hooks/: useApi.ts  useWebSocket.ts
